# LAS-Language-GraphRAG-MCP

./: .dockerignore  .env.example  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  server.py
cyber_graph_triage/: __init__.py  bridge_manager.py  cli.py  config.py  extractors.py  neo4j_client.py  report.py  schemas.py  triage_service.py  ws_bolt_bridge.py
cyber_graph_triage/cypher/: import_cwe_chain_component.cypher  import_cwe_chain_component_placeholder.cypher  lookup_cpe_vulnerabilities_graphker.cypher  lookup_cve_graphker.cypher  lookup_cwe_graphker.cypher  trace_cve_to_attack_graphker.cypher
cyber_graph_triage/data/: cwe_chain_components_patch.json
cyber_graph_triage/importers/: cwe_chain_components.py
cyber_graph_triage/tools/: __init__.py  execute_cypher.py  get_schema.py  lookup_cpe_vulnerabilities.py  lookup_cve.py  lookup_cwe.py  schema_introspection.py  trace_cve_to_attack.py
docs/: cwe_chain_component_import.md  mcp_tools_and_operation_zh.md
skills/cyber-graph-soc-triage/: SKILL.md
skills/cyber-graph-soc-triage/examples/: alert_with_cve.md  alert_with_cwe_chain.md  product_cpe_lookup.md  schema_debug.md
skills/cyber-graph-soc-triage/reference/: evidence_path_policy.md  response_policy.md  tool_selection.md
tests/: test_bridge_manager.py  test_config.py  test_cwe_chain_components_importer.py  test_e2e_mcp.py  test_extractors.py  test_report.py  test_ws_bolt_bridge.py
