[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyber-graph-triage"
version = "0.1.0"
description = "SOC Triage Mode PoC — MCP server over Neo4j cybersecurity knowledge graph"
requires-python = ">=3.12"
dependencies = [
    "neo4j>=5.0",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "mcp[cli]>=1.4.1",
    "starlette>=0.46.1",
    "uvicorn>=0.34.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
neo4j-ws-bolt-bridge = "cyber_graph_triage.ws_bolt_bridge:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cyber_graph_triage*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
